# django-svcs

./: AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  pypi-package.yml
src/django_svcs/: __init__.py  apps.py  middleware.py  plugin.py
tests/: __init__.py  conftest.py  settings.py  test_django.py  test_django_svcs.py  test_middleware.py
tests/test_project/: settings.py  urls.py
