[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version", "readme"]
name = "django_svcs"
description = "A Django integration for SVCS"
requires-python = ">=3.12"
authors = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
maintainers = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "svcs"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist[psutil]",
    "django>=5.0"  # we don't force a Django version, but we do check it.
]
cov = [
    "django_svcs[tests]",
    "coverage[toml]>=5.3",
]
docs = []
dev = [
    "django_svcs[cov]",
    "django_svcs[docs]",
]

[project.urls]
bugs = "https://github.com/offbyone/django_svcs/issues"
changelog = "https://github.com/offbyone/django_svcs/blob/master/changelog.md"
homepage = "https://github.com/offbyone/django_svcs"

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[tool.hatch.build.targets.wheel]
packages = ["src/django_svcs"]

[tool.hatch.version]
source = "vcs"
#raw-options = { local_scheme = "no-local-version" }

[tool.ruff]
src = ["src", "tests", "conftest.py", "docs"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
looponfailroots = ["tests", "src"]
