[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "django_svcs"
readme = "README.md"
description = "A Django integration for SVCS"
requires-python = ">=3.12"
authors = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
maintainers = [
  {name = "Chris Rose", email = "offline@offby1.net"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
license = {text = "BSD license"}
dependencies = [
  "svcs"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist[psutil]",
    "django>=5.0"  # we don't force a Django version, but we do check it.
]
cov = [
    "django_svcs[tests]",
    "coverage[toml]>=5.3",
]
docs = []
dev = [
    "django_svcs[cov]",
    "django_svcs[docs]",
]

[project.urls]
bugs = "https://github.com/offbyone/django_svcs/issues"
changelog = "https://github.com/offbyone/django_svcs/blob/main/CHANGELOG.md"
homepage = "https://github.com/offbyone/django_svcs"

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[tool.hatch.build.targets.wheel]
packages = ["src/django_svcs"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.ruff]
src = ["src", "tests", "conftest.py", "docs"]

[tool.pytest.ini_options]
looponfailroots = ["tests", "src"]

[tool.coverage.run]
branch = true
parallel = true
source = ["django_svcs", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  # Typing-related
  "if TYPE_CHECKING:",
  ": +\\.\\.\\.$",
]
